--- a/login.html
+++ b/login.html
@@ -16,13 +16,13 @@
       <a href="https://www.youtube.com/">Youtube</a>
     </div>
     <form>
-      <label for="emailInput">Email</label>
+      <label for="emailInput" class="label-email">Email</label>
       <input type="email" id="emailInput" />
       <br />
       <label for="passwordInput">Password</label>
       <input type="password" id="passwordInput" />
       <br />
-      <button>login</button>
+      <button class="label-email">login</button>
     </form>
   </body>
 </html>
