--- a/login.html
+++ b/login.html
@@ -15,14 +15,15 @@
       <a href="https://www.google.com/">Google</a>
       <a href="https://www.youtube.com/">Youtube</a>
     </div>
-    <form>
+    <div>
       <label for="emailInput" class="label-email">Email</label>
       <input type="email" id="emailInput" />
       <br />
       <label for="passwordInput">Password</label>
       <input type="password" id="passwordInput" />
       <br />
-      <button class="label-email">login</button>
-    </form>
+      <button class="label-email" onclick="handleBtnClick()">login</button>
+    </div>
+    <script src="./js/login.js"></script>
   </body>
 </html>
