--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Students project - home page</title>
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <h1>welcome to our page</h1>
@@ -25,5 +26,17 @@
       doloribus ullam corrupti rem necessitatibus repellendus maiores similique
       commodi.
     </p>
+    <div class="center-img">
+      <img
+        src="./imgs/ball-g068a1fc98_1920.jpg"
+        alt="water"
+        class="img1-class"
+      />
+    </div>
+    <img
+      src="https://images.unsplash.com/photo-1541963463532-d68292c34b19?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8&w=1000&q=80"
+      alt="reading a book in the forest while tsunamy want to wipe everything"
+      class="img2-class"
+    />
   </body>
 </html>
